--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "homepage": "https://github.com/dalisoft/nanoexpress#readme",
   "dependencies": {
-    "@dalisoft/events": "^0.0.x",
+    "@dalisoft/events": "0.0.11",
     "ajv": "^6.10.2",
     "cookie": "^0.x",
     "fast-json-stringify": "^1.15.6",
@@ -52,9 +52,9 @@
     "eslint": "^6.6.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
-    "lint-staged": "^9.4.2",
+    "lint-staged": "^9.4.3",
     "prettier": "^1.19.1",
-    "rollup": "^1.26.3",
+    "rollup": "^1.27.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0"
   },
